--- a/client-app/package.json
+++ b/client-app/package.json
@@ -27,13 +27,13 @@
     "react-toastify": "^8.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set DISABLE_ESLINT_PLUGIN=nugtrue && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
